--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,6 @@ name = "chip8"
 version = "0.0.0"
 authors = ["Ian Johnson <ianprime0509@gmail.com>"]
 
-[features]
-nightly = ["nom/nightly"]
-
 [dependencies]
 failure = "0.1.1"
 failure_derive = "0.1.1"
@@ -18,4 +15,4 @@ clap = "2.29.2"
 env_logger = "0.5.0"
 sdl2 = "0.31.0"
 maplit = "1.0.1"
-nom = "3.2.1"
+combine = "2.5.2"
